KSENROLL-14780: Moving Search button up to year section and removing cancel link on same page. Other styling tweaks for wrapping issues.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@76250 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/ks-manageRegistration.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/ks-manageRegistration.less
@@ -4,7 +4,7 @@
       overflow: hidden;
     }
 
-    &-show {
+    &-button {
       margin-top: 1.7rem;
     }
 
@@ -16,6 +16,10 @@
     &-studentGroup {
       font-weight: bold;
       white-space: nowrap;
+
+        & a {
+          white-space: nowrap;
+        }
     }
 
     &-AppointmentWindow {
@@ -44,6 +48,10 @@
               float: none;
             }
         }
+    }
+
+    select.input-sm {
+        height: 33px;
     }
 }
 
@@ -88,5 +96,13 @@
         & .uif-collection-column-action div{
           .ks-mixin--flex;
         }
+    }
+}
+
+#KS-RegistrationWindowsManagement-ConfirmDelete-Dialog {
+    width: 16em;
+
+    & fieldset {
+        padding-top: 1rem;
     }
 }
